@@ -13,7 +13,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version:
-          ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
+          ["3.8", "3.9", "3.10", "3.11", "3.12"]
       fail-fast: false
 
     steps:
